feat: add rust-tokio-futures

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 async-std = {version = "1.13.0", features = ["attributes"]}
+futures = "0.3.31"
 tokio = {version = "1.44.0", features = ["full"]}
